# zna_passive_vector_loadpull

./: .gitignore  flowchart.md
reflown/: AGENTS.md  HOWTO.pptx  PrintingJSONL.md  README.md  README_BiasCtrl.md  README_GeneratingSweeps.md  README_knowntests.md  README_plotter.md  TODO  pyproject.toml
reflown/benches/: bench_LF_connectorized  bench_default.toml  bench_dual_channel.toml  bench_dual_supply.toml  bench_loadtuner.toml  bench_simple.toml  bench_validation_codebase.toml
reflown/calibration/: bench_validation.json
reflown/loadsweeps/: load_sweep_attenvalidation.csv  test_Tuner_sweep.csv  test_Tuner_sweep_long.csv
reflown/plotter/: README.md  pyproject.toml
reflown/plotter/loadpull_plotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reflown/plotter/plotter/: __init__.py  app.py  app.ui  populate_db.py  settings.py  ui_form.py
reflown/runs/: sql_query.sql
reflown/saves/: test_VNA_atten.csv
reflown/saves/test_VNA_atten/: 20251212_12GHz.csv  20251212_3GHz.csv  20251212_5GHz.csv  20251215_10GHz.csv  20251215_12GHz.csv  20251215_4GHz.csv  20251215_6GHz.csv  20251215_8GHz.csv  20251215_thru.s2p  (+8 more)
reflown/tests/: test_bias_controller.py  test_calibration_flow.py  test_fake_transport.py  test_sequencing_measure_args.py  test_sequencing_sim.py
reflown/testspecs/: Loadsweep  calibrate_DMM.yaml  calibrate_DMM2.yaml  dmm_test.yaml  power_sweep.yaml  test_DMM.yaml  test_TUNER.yaml  test_registry.yaml
reflown/testspecs copy/: PA_driveup.yaml  test_DMM.yaml  test_VNA.yaml  tuner_test.yaml
reflown/viewer/: README.md  pyproject.toml
(+381 files in other folders)
