[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "loadpull"
version = "0.1.0"
description = "SCPI-based loadpull test harness (CLI-only)"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"typer>=0.12",
"pyyaml>=6.0",
"pydantic>=2.7",
"rich>=13.7",
]


[project.scripts]
loadpull = "loadpull.cli:app"


[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 100