[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loadpull-plotter"
version = "0.1.0"
description = "Standalone PySide6 + pyqtgraph GUI for plotting large measurement runs"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "pyqtgraph>=0.13",
  "PyYAML>=6.0",
]

[project.scripts]
lp-plotter = "plotter.app:main"

